--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
   db:
     container_name: mysql
-    image: mysql:8.0.39
+    image: mysql:9.5
     env_file: .env
     ports:
-      - "9906:3306"
+      - "3306:3306"
     volumes:
-      - db_data:/var/lib/mysql
+      - c:/temp/DB:/var/lib/mysql
   php:
     container_name: php
     build:
@@ -15,6 +15,6 @@ services:
       - "9999:80"
     volumes:
       - ./app/src:/var/www/html
-
-volumes:
-  db_data:
+    env_file: .env
+    depends_on:
+      - db
