--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - c:/temp/DB:/var/lib/mysql
+      - c:/temp/db:/var/lib/mysql
   php:
     container_name: php
     build:
@@ -15,6 +15,17 @@ services:
       - "9999:80"
     volumes:
       - ./app/src:/var/www/html
+      - ./app/resources:/var/www/html/resources
     env_file: .env
+    depends_on:
+      - db
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    ports:
+      - "8080:8080"
+    environment:
+      PMA_HOST: db
     depends_on:
       - db
